# read-dwarf

./: .gitattributes  .gitignore  .ocamlformat  LICENCE  Makefile  O0_test2.state  O0_test3.state  O2_test3.state  README.md  TODO.md  _tags  config.toml  default_config.ml  dune  dune-project  emacs-highlighting  html-postamble.html  html-preamble-insts.html  html-preamble.html  read-dwarf.opam  run_examples.sh  sym.sh
dcm41/: O0_test3.state  O2_test2.state  run_examples.sh
doc/html/: index.html
doc/html/read-dwarf/: Architecture.html  BinaryAnalysis.html  CLI.html  Configuration.html  InstructionPipeline.html  Printing.html  SymbolicExecution.html  SymbolicExpressions.html  TypeInference.html  Utilities.html  index.html
doc/html/read-dwarf/Analyse/: index.html
doc/html/read-dwarf/Analyse__/: index.html
doc/html/read-dwarf/Analyse__Base/: index.html
doc/html/read-dwarf/Analyse__CallGraph/: index.html
doc/html/read-dwarf/Analyse__Collected/: index.html
doc/html/read-dwarf/Analyse__CollectedType/: index.html
doc/html/read-dwarf/Analyse__ComeFrom/: index.html
doc/html/read-dwarf/Analyse__ControlFlow/: index.html
doc/html/read-dwarf/Analyse__ControlFlowPpDot/: index.html
doc/html/read-dwarf/Analyse__ControlFlowPpText/: index.html
doc/html/read-dwarf/Analyse__ControlFlowTypes/: index.html
doc/html/read-dwarf/Analyse__DwarfFrameInfo/: index.html
doc/html/read-dwarf/Analyse__DwarfInliningInfo/: index.html
doc/html/read-dwarf/Analyse__DwarfLineInfo/: index.html
doc/html/read-dwarf/Analyse__DwarfVarInfo/: index.html
doc/html/read-dwarf/Analyse__Elf/: index.html
doc/html/read-dwarf/Analyse__ElfSymbols/: index.html
doc/html/read-dwarf/Analyse__ElfTypes/: index.html
doc/html/read-dwarf/Analyse__Globals/: index.html
doc/html/read-dwarf/Analyse__Pp/: index.html
doc/html/read-dwarf/Analyse__QemuLog/: index.html
doc/html/read-dwarf/Analyse__RangedVarType/: index.html
doc/html/read-dwarf/Analyse__SdtUtils/: index.html
doc/html/read-dwarf/Analyse__Types/: index.html
doc/html/read-dwarf/Analyse__Utils/: index.html
doc/html/read-dwarf/Arch/: index.html
doc/html/read-dwarf/Ast/: index.html
doc/html/read-dwarf/AstGen/: index.html
doc/html/read-dwarf/AstGen__Def/: index.html
doc/html/read-dwarf/AstGen__Lexer/: index.html
doc/html/read-dwarf/AstGen__Ott/: index.html
doc/html/read-dwarf/AstGen__Parser/: index.html
doc/html/read-dwarf/AstGen__Parser_pp/: index.html
doc/html/read-dwarf/Ast__/: index.html
doc/html/read-dwarf/Config/: index.html
doc/mlds/: Architecture.mld  BinaryAnalysis.mld  CLI.mld  Configuration.mld  InstructionPipeline.mld  Printing.mld  SymbolicExecution.mld  SymbolicExpressions.mld  TypeInference.mld  Utilities.mld  Utility.mld  index.mld
etc/: headache_config  objdump-wip.patch  objdump-wip.patch.md  old-simrel-check-wip.patch  old-simrel-check-wip.patch.md
src/: AnalyseGlobals.ml  BB.ml  BytesSeq.ml  BytesSeq.mli  Elf.ml  ElfFile.ml  ElfSymTable.ml  ElfSymTable.mli  ElfSymbol.ml  ElfSymbol.mli  PP.ml  PPA.ml  PPExp.ml  PPI.ml  Pair.ml  README.md  Segment.ml  StateTree.ml  Tests.ml  Z3.ml  analyse.ml  analyseCallGraph.ml  analyseCollected.ml  analyseCollectedType.ml  analyseComeFrom.ml  analyseControlFlow.ml  analyseControlFlowPpDot.ml  analyseControlFlowPpText.ml  analyseControlFlowTypes.ml  analyseDwarfFrameInfo.ml  analyseDwarfInliningInfo.ml  analyseDwarfLineInfo.ml  analyseDwarfVarInfo.ml  analyseElf.ml  analyseElfSymbols.ml  analyseElfTypes.ml  analysePp.ml  analyseQemuLog.ml  analyseRangedVarType.ml  analyseSdtUtils.ml  (+116 more)
src/analyse/: Base.ml  CallGraph.ml  Collected.ml  CollectedType.ml  ComeFrom.ml  ControlFlow.ml  ControlFlowPpDot.ml  ControlFlowPpText.ml  ControlFlowTypes.ml  DwarfFrameInfo.ml  DwarfInliningInfo.ml  DwarfLineInfo.ml  DwarfVarInfo.ml  Elf.ml  ElfSymbols.ml  ElfTypes.ml  Globals.ml  Pp.ml  QemuLog.ml  RangedVarType.ml  SdtUtils.ml  Types.ml  Utils.ml  analyse.ml  dune  emacs-highlighting  html-postamble.html  html-preamble-insts.html  html-preamble.html
src/arch/: arch.ml  dune  sig.mli
src/arch/aarch64/: dune  sig.ml
src/arch/riscv64/: dune  sig.ml
src/archs/: AArch64.ml
src/ast/: ast.ml  base.ml  dune  manip.ml
src/branchTable/: branchTable.ml  dune  instrsAnalyses.ml  instrsAnalyses.mli
src/config/: arch.ml  commonOpt.ml  config.ml  config.toml  default.ml  dune  file.ml  file.mli  isla_aarch64.toml  isla_riscv64.toml
src/ctype/: ctype.ml  dune
src/dw/: dune  dw.ml  func.ml  loc.ml  var.ml
src/elf/: dune  file.ml  segment.ml  symTable.ml  symTable.mli  symbol.ml  symbol.mli
src/exp/: concreteEval.ml  concreteEval.mli  dune  exp.ml  ppExp.ml  sums.ml  sums.mli  typed.ml  value.ml
src/isla/: base.ml  cache.ml  conv.ml  dune  isla.ml  manip.ml  preprocess.ml  preprocess.mli  run.ml  server.ml  test.ml  type.ml
src/run/: BB.ml  bb_lib.ml  block.ml  block_lib.ml  dune  func.ml  func.mli  funcRD.ml  init.ml  instr.ml  readDwarf.ml  runner.ml
src/simrel/: O0_test2.state  O0_test3.state  O2_test2.state  O2_test3.state  base.ml  dune  run_examples.sh  test.ml
src/state/: base.ml  base.mli  dune  fragment.ml  fragment.mli  reg.ml  reg.mli  simplify.ml  state.ml  stateSimplify.ml  symbolicBytes.ml  symbolicFragment.ml  tree.ml
src/tests/: bytesSeqT.ml  common.ml  concreteEvalT.ml  dune  expGen.ml  main.ml  simplifyCheck.ml
src/trace/: base.ml  cache.ml  context.ml  dune  instr.ml  run.ml  trace.ml  typer.ml
src/utils/: array.ml  bitVec.ml  bitVec.mli  bits.ml  bits.mli  bytesSeq.ml  bytesSeq.mli  cache.ml  cmd.ml  cmd.mli  cmdlinerHelper.ml  counter.ml  counter.mli  dune  files.ml  fullVec.ml  fullVec.mli  fun.ml  hashVector.ml  hashVector.mli  idMap.ml  idMap.mli  intBits.ml  intBits.mli  list.ml  logs.ml  logs.mli  option.ml  option.mli  pair.ml  pair.mli  pp.ml  protect.ml  raise.ml  rngMap.ml  seq.ml  string.ml  vec.ml  vec.mli  weakMap.ml  (+3 more)
src/z3/: dune  intro.smt2  z3.ml
test_asm/: Makefile  test.asm
tests/: bytesSeqT.ml  common.ml  concreteEvalT.ml  dune  expGen.ml  main.ml  simplifyCheck.ml
tiny_test2/: Makefile  dummy.branch-tables  test.c
(+496 files in other folders)
