(library
 (public_name read-dwarf.aarch64)
 (name sig_aarch64)
 (flags
  (:standard -open Utils))
 (implements sig)
 (inline_tests
  (backend read-dwarf.qtest.sig.aarch64))
 (libraries utils config state))

(library
 (name qtest_sig_aarch64)
 (public_name read-dwarf.qtest.sig.aarch64)
 (modules)
 (inline_tests.backend
  (generate_runner
   (run qtest extract --preamble "[@@@ocaml.warning \"-33\"];; open Utils;;" --quiet %{impl-files}
     %{intf-files}))
  (runner_libraries qcheck ounit2 bytes)))
